--- a/action.yml
+++ b/action.yml
@@ -2,7 +2,7 @@ name: 'Auto-assign Issue'
 description: 'Auto-assigns issues to users'
 inputs:
     repo-token:
-        description: 'The GITHUB_TOKEN, neede to update the Issue'
+        description: 'The GITHUB_TOKEN, needed to update the Issue'
         required: true
     assignees:
         description: 'Comma separated list of user names'
