--- a/.github/workflows/ci-pr.yml
+++ b/.github/workflows/ci-pr.yml
@@ -6,7 +6,7 @@ on:
         types: [opened, edited, synchronize, reopened]
 
 jobs:
-    format-lint-lwc-tests:
+    format-lint-test:
         runs-on: ubuntu-latest
         steps:
             - name: 'Checkout source code'
