--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,7 +7,7 @@ on:
             - master
 
 jobs:
-    format-lint-lwc-tests:
+    format-lint-test:
         runs-on: ubuntu-latest
         steps:
             - name: 'Checkout source code'
