--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
         "husky": "^8.0.1",
         "jest": "^28.1.3",
         "lint-staged": "^13.0.3",
-        "prettier": "^2.7.1"
+        "prettier": "^2.7.1",
+        "typescript": "^4.7.4"
     },
     "engines": {
         "node": ">=16"
