fix so that you can add the team it self as the reviewer

--- a/action.yml
+++ b/action.yml
@@ -32,6 +32,10 @@ inputs:
     issueNumber:
         description: 'Manually specified issue (or PR) ID to be used instead of the one in the context.'
         required: false
+    teamIsPullRequestReviewer:
+        description: 'Flag that allows a team to be set as reviewer'
+        required: false
+        default: false
 
 runs:
     using: 'node16'
