--- a/package.json
+++ b/package.json
@@ -54,7 +54,6 @@
         "node": ">=16"
     },
     "volta": {
-        "node": "16.16.0",
-        "npm": "8.11.0"
+        "node": "18.18.2"
     }
 }
